Responsive fix on mobile

--- a/src/styles/components/SideMenu.scss
+++ b/src/styles/components/SideMenu.scss
@@ -1,10 +1,11 @@
 @import "../dark-variables";
 @import "../light-variables";
 
+@import "../breakpoints";
+@import "../mixins";
+
 .SideMenu-container {
   height: 100%;
-  margin: 5px 5px;
-  border-radius: 10px;
 
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
@@ -14,5 +15,10 @@
 
   &.dark {
     background-color: $dark-bg-200;
+  }
+
+  @include md {
+    border-radius: 10px;
+    margin: 5px 5px;
   }
 }
