--- a/src/styles/components/TitleBar.scss
+++ b/src/styles/components/TitleBar.scss
@@ -4,7 +4,7 @@
 @import "../breakpoints";
 @import "../mixins";
 
-.AppBar-container {
+.Title-container {
   margin: 5px;
   border-radius: 10px;
   left: 0px !important;
@@ -13,13 +13,21 @@
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
   &.light {
-    background-color: $light-bg-300;
     color: $light-text-100;
+
+    .MuiToolbar-root {
+      border-radius: 10px;
+      background-color: $light-bg-200;
+    }
   }
 
   &.dark {
-    background-color: $dark-bg-300;
     color: $dark-text-100;
+
+    .MuiToolbar-root {
+      border-radius: 10px;
+      background-color: $dark-bg-200;
+    }
   }
 
   @include md {
